--- a/serialize-state/package.json
+++ b/serialize-state/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/sravan-s/front-end-challenge#readme",
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
