--- a/serialize-state/package.json
+++ b/serialize-state/package.json
@@ -36,7 +36,8 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "immutable": "^3.8.1"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
