--- a/serialize-state/package.json
+++ b/serialize-state/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "fontawesome": "^4.5.0",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-addons-update": "^15.4.1",
     "react-dom": "^15.4.1",
