--- a/serialize-state/package.json
+++ b/serialize-state/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "webpack-server": "webpack-dev-server --progress --colors"
+    "webpack-server": "webpack-dev-server --progress --colors",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -26,10 +28,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "jest": "^17.0.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
