--- a/serialize-state/package.json
+++ b/serialize-state/package.json
@@ -33,7 +33,9 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "enzyme": "^2.6.0",
     "jest": "^17.0.3",
+    "react-addons-test-utils": "^15.4.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
